# cpp_project_template

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  setup.sh
app/: CMakeLists.txt  exectest.sh  main.cpp
include/lib/: lib.hpp
include/mylib/: mylib.hpp
src/: CMakeLists.txt  lib.cpp  mylib.cpp
test/: CMakeLists.txt
tools/: clang-format.sh  pre-commit
tools/pre-commit.d/: clang-format
